TD CTO Version 1.23 - Revised 9/19/2016 Prashant

--- a/tcm/modules/web/src/main/webapp/activate.xhtml
+++ b/tcm/modules/web/src/main/webapp/activate.xhtml
@@ -4,6 +4,13 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
                 template="/template/common/simple.xhtml">
+    <f:metadata>
+        <f:viewParam name="l" value="#{userBean.beanLogonID}"/>
+        <f:viewParam name="e" value="#{userBean.beanEmail}"/>
+        <f:viewParam name="r" value="#{userBean.beanResetID}"/>
+        <f:event type="preRenderView"
+                 listener="#{userBean.preRenderActivateUser}"/>
+    </f:metadata>
 
     <ui:define name="content">
         <div id="layout-portlets-cover">
@@ -25,7 +32,7 @@
                         <div class="ContainerIndent">
 
                             <h3>
-                                Your account is now active. You may now logon.
+                                Your account is now active. You may now login.
                             </h3>
                             <br/>
 
