--- a/tcm/modules/web/src/main/webapp/signup3.xhtml
+++ b/tcm/modules/web/src/main/webapp/signup3.xhtml
@@ -38,12 +38,12 @@
 							</h4>
 						</div>
 						<div class="EmptyBox10"></div>
-						<p:button value="OK" styleClass="Fs16 BlueButton"
+						<p:button value="Login" styleClass="Fs16 BlueButton"
 							href="/login.xhtml" />
 						<div class="EmptyBox10"></div>
 						<p:commandButton value="Resend confirmation"
 							styleClass="Fs16 OrangeButton"
-							actionListener="#{userBean.emailActivate}" />
+							actionListener="#{userBean.sendActivatedEmail}" />
 						<div class="EmptyBox10"></div>
 
 					</h:form>
