--- a/tcm/modules/web/src/main/webapp/signup.xhtml
+++ b/tcm/modules/web/src/main/webapp/signup.xhtml
@@ -1,130 +1,140 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui"
-	template="/template/common/simple.xhtml">
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:p="http://primefaces.org/ui"
+                template="/template/common/simple.xhtml">
 
 
-	<f:metadata>
-		<f:viewParam name="l" value="#{userBean.beanLogonID}" />
-		<f:viewParam name="e" value="#{userBean.beanEmail}" />
-		<f:event type="preRenderView"
-			listener="#{userBean.preRenderCreateUserID}" />
-	</f:metadata>
+    <f:metadata>
+        <f:viewParam name="l" value="#{userBean.beanLogonID}"/>
+        <f:viewParam name="e" value="#{userBean.beanEmail}"/>
+        <f:viewParam name="r" value="#{userBean.beanResetID}"/>
+        <f:event type="preRenderView"
+                 listener="#{userBean.preRenderCreateUserID}"/>
+    </f:metadata>
 
-	<ui:define name="content">
-		<div id="layout-portlets-cover">
-			<div class="EmptyBox50"></div>
-			<div
-				class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray">
-				<div class="Container90 Fnone MarAuto TexAlLeft">
-					<h:form styleClass="formPage">
+    <ui:define name="content">
+        <div id="layout-portlets-cover">
+            <div class="EmptyBox50"></div>
+            <div
+                    class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray">
+                <div class="Container90 Fnone MarAuto TexAlLeft">
+                    <h:form styleClass="formPage">
 
-						<p:panel id="signup" styleClass="Container100"
-							style="border:0px; background-color: transparent!important;">
+                        <p:panel id="signup" styleClass="Container100"
+                                 style="border:0px; background-color: transparent!important;">
 
-							<p:panel id="p1"
-								styleClass="Container100 Responsive100 SignupBlock0"
-								style="background-color: transparent!important; border: 0px">
-								<div class="Container100 TexAlCenter">
-									<h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
-										styleClass="" library="invessence" class="MarAuto MarTop20"
-										style="height: 50px" />
-								</div>
-								<div class="Container100">
+                            <p:panel id="p1"
+                                     styleClass="Container100 Responsive100 SignupBlock0"
+                                     style="background-color: transparent!important; border: 0px">
+                                <div class="Container100 TexAlCenter">
+                                    <h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
+                                                    styleClass="" library="invessence" class="MarAuto MarTop20"
+                                                    style="height: 50px"/>
+                                </div>
+                                <div class="Container100">
+                                    <p:messages id="signmsg" showDetail="false" sticky="true"
+                                                escape="true" closable="true"/>
+                                    <div class="EmptyBox10"></div>
+                                </div>
 
-									<p:messages id="signmsg" showDetail="false" sticky="true"
-										escape="true" closable="true" />
-										<div><label class="sigupLabel">Full Name</label></div>
-										<p:inputText id="firstName" styleClass="FS14 InputMergeRight CustomWidthFA3"
-                                                         value="#{userBean.userdata.firstName}" placeholder="First Name"
-                                                         required="true" requiredMessage="Please enter First Name.">
-                                            </p:inputText>
+                                 <p:panel rendered="#{userBean.newRegistration}"
+                                          class="Container100"
+                                          style="border: 0px; background: transparent">
+                                     <div><label class="sigupLabel">Full Name</label></div>
+                                     <p:inputText id="firstName" styleClass="FS14 InputMergeRight CustomWidthFA3"
+                                                  value="#{userBean.userdata.firstName}" placeholder="First Name">
+                                     </p:inputText>
 
-                                            <p:inputText id="lastName" styleClass="FS14 InputMergeLeft CustomWidthFA3"
-                                                         value="#{userBean.userdata.lastName}" placeholder="Last Name"
-                                                         required="true" requiredMessage="Please enter Last Name.">
-                                                <p:watermark for="lastName" value="Last Name"/>
-                                            </p:inputText>
-									<div class="EmptyBox10"></div>
-									<label class="sigupLabel">Email Id</label>
-									<p:inputText id="email"
-										readonly="#{userBean.beanEmail != null}"
-										styleClass="Wid100 Fleft MarAuto Fs14"
-										value="#{userBean.beanEmail}" placeholder="Email">
-									</p:inputText>
-								</div>
-								<div class="EmptyBox10"></div>
-								<div class="Container100">
-								<label class="sigupLabel">User Id</label>
-									<p:inputText id="userid" styleClass="Wid100 Fleft MarAuto Fs14"
-										value="#{userBean.beanUserID}" placeholder="User ID"
-										required="true" requiredMessage="Please create your User ID.">
-										<f:validator validatorId="UserIDValidator" />
-									</p:inputText>
-									<p:commandButton id="uidHelp"
-										styleClass="sigupRegRootHelp0 Fright"
-										icon="fa fa-question Fs14 Black" process="@none" />
+                                     <p:inputText id="lastName" styleClass="FS14 InputMergeLeft CustomWidthFA3"
+                                                  value="#{userBean.userdata.lastName}" placeholder="Last Name">
+                                         <p:watermark for="lastName" value="Last Name"/>
+                                     </p:inputText>
+                                     <div class="EmptyBox10"></div>
+                                 </p:panel>
 
-									<p:overlayPanel id="uidHP" for="uidHelp" hideEffect="fade"
-										dynamic="false" showCloseIcon="true"
-										style="width:350px; margin-left: 5px">
-                                            UserID must contain a minimum of 6 alpha characters and
-                                            may contain one of these special characters: '.' or '-'
-                                        </p:overlayPanel>
+                                <div class="Container100">
+                                    <label class="sigupLabel">Email Id</label>
+                                    <p:inputText id="email"
+                                                 readonly="#{userBean.beanEmail != null}"
+                                                 styleClass="Wid100 Fleft MarAuto Fs14"
+                                                 value="#{userBean.beanEmail}" placeholder="Email">
+                                        <f:validator validatorId="EmailValidator"/>
+                                    </p:inputText>
+                                </div>
+                                <div class="EmptyBox10"></div>
+                                <div class="Container100">
+                                    <label class="sigupLabel">User Id</label>
+                                    <p:inputText id="userid" styleClass="Wid100 Fleft MarAuto Fs14"
+                                                 value="#{userBean.beanUserID}" placeholder="User ID"
+                                                 required="true" requiredMessage="Please create your User ID.">
+                                        <f:validator validatorId="UserIDValidator"/>
+                                    </p:inputText>
+                                    <p:commandButton id="uidHelp"
+                                                     styleClass="sigupRegRootHelp0 Fright"
+                                                     icon="fa fa-question Fs14 Black" process="@none"/>
+
+                                    <p:overlayPanel id="uidHP" for="uidHelp" hideEffect="fade"
+                                                    dynamic="false" showCloseIcon="true"
+                                                    style="width:350px; margin-left: 5px">
+                                        UserID must contain a minimum of 6 alpha characters and
+                                        may contain one of these special characters: '.' or '-'
+                                    </p:overlayPanel>
 
 
-								</div>
-								<div class="EmptyBox10"></div>
-								<div class="Container100">
-								<label class="sigupLabel">Password</label>
-									<p:password id="pwd1" styleClass="Wid100 Fleft MarAuto Fs14"
-										value="#{userBean.pwd1}" placeholder="Password"
-										required="true" requiredMessage="Password must be entered.">
+                                </div>
+                                <div class="EmptyBox10"></div>
+                                <div class="Container100">
+                                    <label class="sigupLabel">Password</label>
+                                    <p:password id="pwd1" styleClass="Wid100 Fleft MarAuto Fs14"
+                                                value="#{userBean.pwd1}" placeholder="Password"
+                                                required="true" requiredMessage="Password must be entered.">
 
-									</p:password>
-									<p:commandButton id="pwdHelp"
-										styleClass="Fright sigupRegRootHelp0"
-										icon="fa fa-question Fs14 Black" process="@none" />
+                                    </p:password>
+                                    <p:commandButton id="pwdHelp"
+                                                     styleClass="Fright sigupRegRootHelp0"
+                                                     icon="fa fa-question Fs14 Black" process="@none"/>
 
-									<p:overlayPanel id="helpPanel" for="pwdHelp" hideEffect="fade"
-										dynamic="false" showCloseIcon="true"
-										style="width:350px; margin-left: 5px">
-                                            Password must contain a minimum of 8 characters including at least:
-                                            <ul>
-											<li>1 uppercase letter</li>
-											<li>1 number</li>
-											<li>1 of these special characters: !,#$%?:.</li>
-										</ul>
-									</p:overlayPanel>
-								</div>
-								<div class="EmptyBox10"></div>
-								<div class="Container100">
-<label class="sigupLabel">Confirm Password</label>
-									<p:password id="pwd2" styleClass="Wid100 Fleft MarAuto Fs14"
-										value="#{userBean.pwd2}" placeholder="Confirm Password">
-									</p:password>
-								</div>
-								<div class="EmptyBox5"></div>
-								<p:separator />
-								<div class="EmptyBox5"></div>
-								<div class="Container100">
-									<div class="TexAlCenter">
-										<p:commandButton value="Next" type="submit"
-											actionListener="#{userBean.validateSignOn}"
-											update="p1, signmsg" />
-									</div>
-								</div>
-							</p:panel>
+                                    <p:overlayPanel id="helpPanel" for="pwdHelp" hideEffect="fade"
+                                                    dynamic="false" showCloseIcon="true"
+                                                    style="width:350px; margin-left: 5px">
+                                        Password must contain a minimum of 8 characters including at least:
+                                        <ul>
+                                            <li>1 uppercase letter</li>
+                                            <li>1 number</li>
+                                            <li>1 of these special characters: !,#$%?:.</li>
+                                        </ul>
+                                    </p:overlayPanel>
+                                </div>
+                                <div class="EmptyBox10"></div>
+                                <div class="Container100">
+                                    <label class="sigupLabel">Confirm Password</label>
+                                    <p:password id="pwd2" styleClass="Wid100 Fleft MarAuto Fs14"
+                                                value="#{userBean.pwd2}" placeholder="Confirm Password">
+                                    </p:password>
+                                </div>
+                                <div class="EmptyBox5"></div>
+                                <p:separator/>
 
-						</p:panel>
-						<div class="EmptyBox10"></div>
-					</h:form>
-				</div>
-			</div>
-		</div>
+                                <div class="EmptyBox5"></div>
+                                <div class="Container100">
+                                    <div class="TexAlCenter">
+                                        <p:commandButton value="Next" type="submit"
+                                                         actionListener="#{userBean.validateSignOn}"
+                                                         update="p1, signmsg"/>
+                                    </div>
+                                </div>
+                            </p:panel>
 
-	</ui:define>
+                        </p:panel>
+
+                        <div class="EmptyBox10"></div>
+                    </h:form>
+                </div>
+            </div>
+        </div>
+
+    </ui:define>
 
 </ui:composition>
