Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
@@ -22,7 +22,7 @@
                 <p:message for="initialIid" display="tooltip"/>
 
                 <div class="mobileFullWidth"><h3 class="formFS"> for </h3></div>
-                <p:selectOneMenu id="q3" value="#{tcmpb.goal}" styleClass="TCM-UI-Dropdown dropdownInputFullWidth"
+                <p:selectOneMenu id="q3" value="#{tcmpb.goal}" styleClass="TCM-UI-Dropdown dropdownInputFullWidth portfolioCreationDD"
                                  required="true" requiredMessage="Please choose investment strategy">
                     <p:ajax listener="#{tcmpb.onGoalChangeValue}"
                             update=":ceForm:p1hrznpanel, :ceForm:inputArea"/>
