--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -25,7 +25,7 @@
                             <p:selectBooleanCheckbox
                                     styleClass="RegulatoryCheckBox"
                                     value="#{tdcto.tdMasterData.recurringFlag}"
-                                    itemLabel="I would like to make recurring investments.">
+                                    itemLabel="I would like to make recurring investments.(See new tab)">
                                 <p:ajax update=":ctoForm:tdaccordian:fundTabV"/>
                             </p:selectBooleanCheckbox>
                         </div>
