--- a/tcm/modules/web/src/main/webapp/login.xhtml
+++ b/tcm/modules/web/src/main/webapp/login.xhtml
@@ -13,23 +13,24 @@
 <ui:define name="content">
 
     <div id="layout-portlets-cover">
+    <div class="EmptyBox50"></div>
         <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
              style="margin-top:5%; background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
             <div class="Container90 Fnone MarAuto TexAlCenter">
-                <h:form id="logonForm" prependId="false">
+                <h:form id="logonForm" prependId="false" styleClass="formPage">
                     <div class="EmptyBox50"></div>
                     <h:graphicImage id="logo" name="#{uiLayout.logo}" styleClass="Fleft" library="invessence"
                                     class="MarAuto MarTop20 MarBot10"/>
                     <div class="EmptyBox20"></div>
                     <p:messages id="messages" autoUpdate="true"/>
                     <f:event listener="#{loginController.updateMessages}" type="preRenderView"/>
-                    <p:inputText id="j_username" placeholder="Username" styleClass="Container80 Fnone MarAuto Fs18"
+                    <p:inputText id="j_username" placeholder="Username" style="background: #f2f2f2;" styleClass="Container80 Fnone MarAuto Fs18"
                                  required="true"
                                  requiredMessage="Please enter UserID."
                                  value="#{loginController.userID}">
                     </p:inputText>
                     <div class="EmptyBox10"></div>
-                    <p:password id="j_password"  placeholder="Password" styleClass="Container80 Fnone MarAuto Fs18"
+                    <p:password id="j_password"  placeholder="Password" style="background: #f2f2f2;" styleClass="Container80 Fnone MarAuto Fs18"
                                 feedback="false" value="#{loginController.password}"
                                 requiredMessage="Please enter Password."/>
                         <div class="EmptyBox5"></div>
