--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -175,8 +175,17 @@
 
 							<div class="Container32 CustomWidthFA2">
 								<label Class="Container100"
-									   style="text-align: left !important; font-weight: bold !important;">Per
-									Stirpes</label>
+									   style="text-align: left !important; font-weight: bold !important; display: inline-flex;">
+									   Per
+									Stirpes <p:commandButton id="pStripesHelp"
+										styleClass="perStripesHelp" process="@none">(?)</p:commandButton>
+										<p:overlayPanel id="pSHelp" for="pStripesHelp" hideEffect="fade"
+										dynamic="false" showCloseIcon="true"
+										style="width:350px; margin-left: 5px">
+                                           Per Stirpes shall mean: each branch of the decedent’s family shall inherit in equal parts and by way of representation. Please note that the ”Per Stirpes” designation carries
+certain legal and tax implications, and may not be available in all states. TD Ameritrade cannot advise whether a “Per Stirpes” election is appropriate for the Account Owner’s
+tax or estate planning. Please consult an estate planner for details regarding this designation.
+                                        </p:overlayPanel></label>
 								<div class="EmptyBox5"></div>
 								<div class="Container100 Fleft">
 									<div style="margin-top: 15px;">
@@ -184,6 +193,8 @@
 																 value="#{tdcto.tdMasterData.tmpBenefiaciaryDetail.perStripes}"
 																 itemLabel="Per Stirpes">
 										</p:selectBooleanCheckbox>
+
+
 									</div>
 								</div>
 
