Check data saving in tables- Sandeep

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -166,8 +166,8 @@
 										 style="margin-top: 5px;">
 										<p:selectOneRadio styleClass="textAlign formRadioBtn"
 														  value="#{tdcto.tdMasterData.tmpBenefiaciaryDetail.typeOfBeneficiary}">
-											<f:selectItem itemValue="1" itemLabel="Primary" />
-											<f:selectItem itemValue="2" itemLabel="Contigent" />
+											<f:selectItem itemValue="BTPRIM" itemLabel="Primary" />
+											<f:selectItem itemValue="BTCONT" itemLabel="Contigent" />
 										</p:selectOneRadio>
 									</div>
 								</div>
