--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -17,7 +17,7 @@
                                                      styleClass="RegulatoryCheckBox"
                                                      value="#{tdcto.tdMasterData.fundNow}"
                                                      itemLabel="Do you want to fund now?">
-                                <p:ajax update=":ctoForm:tdaccordian:fundTabV"/>
+                                <p:ajax update=":ctoForm:tdaccordian:fundTabV:funddetailsPanel"/>
                             </p:selectBooleanCheckbox>
                         </div>
                         <div class="EmptyBox10"></div>
@@ -25,12 +25,14 @@
                             <p:selectBooleanCheckbox
                                     styleClass="RegulatoryCheckBox"
                                     value="#{tdcto.tdMasterData.recurringFlag}"
-                                    itemLabel="I would like to make recurring investments.(See new tab)">
+                                    itemLabel="I would like to make recurring investments.">
                                 <p:ajax update=":ctoForm:tdaccordian:fundTabV"/>
                             </p:selectBooleanCheckbox>
                         </div>
                     </div>
                 </div>
+                </p:panel>
+            <p:panel id="funddetailsPanel" style="border: 0px; background: transparent">
 
                 <div class="Container100">
                     <p:panel id="fundPanel2" style="border: 0px; background: transparent"
@@ -281,7 +283,6 @@
                                         <f:selectItem itemValue="" itemLabel="Stifel, Nicolaus and Company Incorporated" />
                                         <f:selectItem itemValue="" itemLabel="Wachovia Securities" />
                                         <f:selectItem itemValue="" itemLabel="Wedbush Securities Inc." />
-                                        <f:selectItem itemValue="" itemLabel="Others" />
                                     </p:selectOneMenu>
                                 </div>
                             </div>
@@ -348,22 +349,8 @@
                             </div>
 
                             <div class="EmptyBox20"></div>
-                            
                         </p:panel>
-<div class="Container80 MarTop20" style="margin: 0 auto!important; float: none!important;">
-                    <p:commandLink styleClass="UI-prevButtonFA Fleft"
-                                   actionListener="#{tdcto.prevPage}"
-                                   process="@this"
-                                   update="@form"/>
 
-                    <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-                    				style="background-position-x: 50px!important;"
-                                   rendered="#{tdcto.tdMasterData.recurringFlag}"
-                                   actionListener="#{tdcto.nextPage}"
-                                   process="@parent"
-                                   update="@form"/>
-
-                </div>
                         <!-- Wire transfer -->
                         <p:panel id="wirePanel" styleClass="Container80 Fnone"
                                  style="border: 0px; background: transparent; margin: 0 auto!important;"
@@ -422,7 +409,19 @@
 
                     </p:panel>
                 </div>
-                
+                <div class="Container100 MarTop20" style="margin: 10px 10px;">
+                    <p:commandLink styleClass="UI-prevButtonFA Fleft"
+                                   actionListener="#{tdcto.prevPage}"
+                                   process="@this"
+                                   update="@form"/>
+
+                    <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+
+                                   actionListener="#{tdcto.nextPage}"
+                                   process="@parent"
+                                   update="@form"/>
+
+                </div>
 
             </p:panel>
         </p:tab>
@@ -515,7 +514,7 @@
 
                                 <div class="EmptyBox5"></div>
                                 <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
-                                             value="#{tdcto.tdMasterData.achBankDetail.bankName}"
+                                             value="#{tdcto.tdMasterData.electroicBankDetail.bankName}"
                                              placeholder="Bank Name">
                                 </p:inputText>
                             </div>
@@ -526,7 +525,7 @@
 
                                 <div class="EmptyBox5"></div>
                                 <p:selectOneMenu styleClass="formpageDropdown FundAccountDropdownUI"
-                                                 value="#{tdcto.tdMasterData.achBankDetail.bankAcctType}"
+                                                 value="#{tdcto.tdMasterData.electroicBankDetail.bankAcctType}"
                                                  style="width: 100%;">
                                     <p:ajax/>
                                     <f:selectItem itemLabel="Select Type" itemValue=""
@@ -550,7 +549,7 @@
 
                                 <div class="EmptyBox5"></div>
                                 <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
-                                             value="#{tdcto.tdMasterData.achBankDetail.bankABARouting}"
+                                             value="#{tdcto.tdMasterData.electroicBankDetail.bankABARouting}"
                                              placeholder="ABA Routing Number">
                                 </p:inputText>
                             </div>
@@ -561,7 +560,7 @@
 
                                 <div class="EmptyBox5"></div>
                                 <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
-                                             value="#{tdcto.tdMasterData.achBankDetail.bankAcctNumber}"
+                                             value="#{tdcto.tdMasterData.electroicBankDetail.bankAcctNumber}"
                                              placeholder="Bank Account Number">
                                 </p:inputText>
                             </div>
@@ -575,9 +574,12 @@
                                    actionListener="#{tdcto.prevPage}"
                                    process="@this"
                                    update="@form"/>
+                    <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+                                   actionListener="#{tdcto.nextPage}"
+                                   update="@form"/>
 
-                  <!--   <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-                            rendered="false"/> -->
+                    <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+                            rendered="false"/>
                 </div>
             </p:panel>
 
