Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/signup.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/signup.xhtml
@@ -12,8 +12,9 @@
 
     <ui:define name="content">
         <!-- BOX START -->
+<div class="EmptyBox50"></div>
             <div id="layout-portlets-cover">
-                <div class="other-pages-box Container40 Responsive100 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
+                <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
                      style="margin-top:5%;">
                     <div class="Container90 Fnone MarAuto TexAlLeft">
 
