--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -25,7 +25,7 @@
                             <p:selectBooleanCheckbox
                                     styleClass="RegulatoryCheckBox"
                                     value="#{tdcto.tdMasterData.recurringFlag}"
-                                    itemLabel="I would like to make recurring investments.">
+                                    itemLabel="I would like to make recurring investments.(See new tab)">
                                 <p:ajax update=":ctoForm:tdaccordian:fundTabV"/>
                             </p:selectBooleanCheckbox>
                         </div>
@@ -283,6 +283,7 @@
                                         <f:selectItem itemValue="" itemLabel="Stifel, Nicolaus and Company Incorporated" />
                                         <f:selectItem itemValue="" itemLabel="Wachovia Securities" />
                                         <f:selectItem itemValue="" itemLabel="Wedbush Securities Inc." />
+                                        <f:selectItem itemValue="" itemLabel="Others" />
                                     </p:selectOneMenu>
                                 </div>
                             </div>
@@ -350,7 +351,20 @@
 
                             <div class="EmptyBox20"></div>
                         </p:panel>
+<div class="Container80 MarTop20" style="margin: 0 auto!important; float: none!important;">
+                    <p:commandLink styleClass="UI-prevButtonFA Fleft"
+                                   actionListener="#{tdcto.prevPage}"
+                                   process="@this"
+                                   update="@form"/>
 
+                    <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+                    				style="background-position-x: 50px!important;"
+                                   rendered="#{tdcto.tdMasterData.recurringFlag}"
+                                   actionListener="#{tdcto.nextPage}"
+                                   process="@parent"
+                                   update="@form"/>
+
+                </div>
                         <!-- Wire transfer -->
                         <p:panel id="wirePanel" styleClass="Container80 Fnone"
                                  style="border: 0px; background: transparent; margin: 0 auto!important;"
@@ -409,19 +423,7 @@
 
                     </p:panel>
                 </div>
-                <div class="Container100 MarTop20" style="margin: 10px 10px;">
-                    <p:commandLink styleClass="UI-prevButtonFA Fleft"
-                                   actionListener="#{tdcto.prevPage}"
-                                   process="@this"
-                                   update="@form"/>
 
-                    <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-
-                                   actionListener="#{tdcto.nextPage}"
-                                   process="@parent"
-                                   update="@form"/>
-
-                </div>
 
             </p:panel>
         </p:tab>
@@ -578,8 +580,8 @@
                                    actionListener="#{tdcto.nextPage}"
                                    update="@form"/>
 
-                    <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-                            rendered="false"/>
+                  <!--   <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+                            rendered="false"/> -->
                 </div>
             </p:panel>
 
