--- a/tcm/modules/web/src/main/webapp/mobile.xhtml
+++ b/tcm/modules/web/src/main/webapp/mobile.xhtml
@@ -11,7 +11,7 @@
 </f:metadata>
 
 <ui:define name="content">
-
+<div class="EmptyBox50"></div>
     <div id="layout-portlets-cover">
         <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
              style="margin-top:5%; background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
