--- a/tcm/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
@@ -31,7 +31,9 @@
                         <f:selectItem itemLabel="Student" itemValue="STUDE"/>
                     </p:selectOneMenu>
                 </div>
-                <div class="Container45 Fright-FAAddress CustomWidthFA-Responsive" >
+                <p:panel styleClass="Container45 Fright-FAAddress CustomWidthFA-Responsive" style="border: 0px; background: transparent; "
+                         rendered="#{! tdcto.tdMasterData.owneremploymentDetail.needInfo}">
+                <!--<div class="Container45 Fright-FAAddress CustomWidthFA-Responsive"  >-->
                     <label Class="Container100"
                            style="text-align: left !important; font-weight: bold !important;"  >
                         Source Of Income</label>
@@ -40,9 +42,10 @@
                     <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
                                  value="#{tdcto.tdMasterData.owneremploymentDetail.sourceOfIncome}"
                                  placeholder="Source Of Income"
-                                 rendered="#{! tdcto.tdMasterData.owneremploymentDetail.needInfo}">
+                                 >
                     </p:inputText>
-                </div>
+        <!--            </div>-->
+    </p:panel>
             </div>
             <div class="EmptyBox20"></div>
             <p:panel styleClass="BeneficiaryEditPanel" style="border: 0px; background: transparent; margin-top: -10px;"
@@ -201,135 +204,139 @@
                         <f:selectItem itemLabel="Student" itemValue="STUDE"/>
                     </p:selectOneMenu>
                 </div>
-                <div class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
-                    <label Class="Container100"
-                           style="text-align: left !important; font-weight: bold !important;">Source
-                        Of Income</label>
+                <p:panel styleClass="Container45 Fright-FAAddress CustomWidthFA-Responsive" style="border: 0px; background: transparent; "
+                         rendered="#{! tdcto.tdMasterData.jointEmploymentDetail.needInfo}">
 
-                    <div class="EmptyBox5"></div>
-                    <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
-                                 placeholder="Source Of Income"
-                                 value="#{tdcto.tdMasterData.jointEmploymentDetail.sourceOfIncome}"
-                                 rendered="#{! tdcto.tdMasterData.jointEmploymentDetail.needInfo}">
-                    </p:inputText>
+                    <!--<div class="Container45 Fright-FAAddress CustomWidthFA-Responsive">-->
+                        <label Class="Container100"
+                               style="text-align: left !important; font-weight: bold !important;">Source
+                            Of Income</label>
+
+                        <div class="EmptyBox5"></div>
+                        <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
+                                     placeholder="Source Of Income"
+                                     value="#{tdcto.tdMasterData.jointEmploymentDetail.sourceOfIncome}"
+                                     >
+                        </p:inputText>
+                    <!--</div>-->
+                </p:panel>
                 </div>
+     <div class="EmptyBox20"></div>
+                <p:panel styleClass="BeneficiaryEditPanel" style="border: 0px; background: transparent; margin-top: -10px;"
+                         rendered="#{tdcto.tdMasterData.jointEmploymentDetail.needInfo}">
+
+                    <div class="Container100">
+                        <div class="Container45 Fleft CustomWidthFA-Responsive">
+                            <label Class="Container100"
+                                   style="text-align: left !important; font-weight: bold !important;">Employer
+                                Name</label>
+
+                            <div class="EmptyBox5"></div>
+                            <p:inputText
+                                    styleClass="Wid90 FS14 CustomWidthFA-Responsive"
+                                    value="#{tdcto.tdMasterData.jointEmploymentDetail.employerName}"
+                                    placeholder="Employer Name">
+                            </p:inputText>
+                        </div>
+                        <div
+                                class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
+                            <label Class="Container100"
+                                   style="text-align: left !important; font-weight: bold !important;">Occupation</label>
+
+                            <div class="EmptyBox5"></div>
+                            <p:inputText
+                                    styleClass="Wid90 FS14 CustomWidthFA-Responsive"
+                                    value="#{tdcto.tdMasterData.jointEmploymentDetail.occupation}"
+                                    placeholder="Occupation">
+                            </p:inputText>
+                        </div>
+                    </div>
+
+                    <div class="EmptyBox20"></div>
+
+                    <div class="Container100">
+                        <div class="Container45 Fleft CustomWidthFA-Responsive">
+                            <label Class="Container100"
+                                   style="text-align: left !important; font-weight: bold !important;">Type of Business</label>
+
+                            <div class="EmptyBox5"></div>
+                            <p:inputText
+                                    styleClass="Wid90 FS14 CustomWidthFA-Responsive"
+                                    value="#{tdcto.tdMasterData.jointEmploymentDetail.typeOfBusiness}"
+                                    placeholder="Type of Business">
+                            </p:inputText>
+                        </div>
+                        <div class="Container45 Fright CustomWidthFA-Responsive">
+                            <label Class="Container100"
+                                   style="text-align: left !important; font-weight: bold !important;">Employer
+                                Street Address</label>
+
+                            <div class="EmptyBox5"></div>
+                            <p:inputText
+                                    styleClass="Wid90 FS14 CustomWidthFA-Responsive"
+                                    value="#{tdcto.tdMasterData.jointEmploymentDetail.employerStreetAddress}"
+                                    placeholder="Employer Street Address">
+                            </p:inputText>
+                        </div>
+
+                    </div>
+
+                    <div class="EmptyBox20"></div>
+                    <div class="Container100 CustomWidthFA2 MarTop5">
+                        <div class="Container30 CustomWidthFA-Responsive">
+                            <label Class="Container100"
+                                   style="text-align: left !important; font-weight: bold !important;">City</label>
+
+                            <div class="EmptyBox5"></div>
+                            <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
+                                         value="#{tdcto.tdMasterData.jointEmploymentDetail.employerCity}"
+                                         placeholder="City">
+                            </p:inputText>
+                        </div>
+                        <div class="Container30 Margin-FAAddress CustomWidthFA-Responsive">
+                            <label Class="Container100"
+                                   style="text-align: left !important; font-weight: bold !important;">State</label>
+
+                            <div class="EmptyBox5"></div>
+                            <p:selectOneMenu styleClass="FundAccountDropdownUI formpageDropdown"
+                                             value="#{tdcto.tdMasterData.jointEmploymentDetail.employerState}"
+                                             style="width: 100%;">
+                                <p:ajax/>
+                                <f:selectItem itemLabel="Select State" itemValue=""
+                                              noSelectionOption="true"/>
+                                <f:selectItems value="#{tdcto.tdMasterData.usmaps.states.entrySet()}"
+                                               var="jointemploeyStates" itemLabel="#{jointemploeyStates.value}" itemValue="#{jointemploeyStates.key}"/>
+                            </p:selectOneMenu>
+                        </div>
+                        <div class="Container30 Fright-FAAddress CustomWidthFA-Responsive">
+                            <label Class="Container100"
+                                   style="text-align: left !important; font-weight: bold !important;">Zip
+                                Code</label>
+
+                            <div class="EmptyBox5"></div>
+                            <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
+                                         value="#{tdcto.tdMasterData.jointEmploymentDetail.employerZipCode}"
+                                         placeholder="Zip Code">
+                            </p:inputText>
+                        </div>
+                    </div>
+
+                </p:panel>
+    <div class="Container100 MarTop20" style="margin: 10px 10px;">
+                <p:commandLink styleClass="UI-prevButtonFA Fleft"
+                               actionListener="#{tdcto.prevPage}"
+                               update="@form"/>
+
+                <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+                               actionListener="#{tdcto.nextPage}"
+                               update="@form"/>
             </div>
- <div class="EmptyBox20"></div>
-            <p:panel styleClass="BeneficiaryEditPanel" style="border: 0px; background: transparent; margin-top: -10px;"
-                     rendered="#{tdcto.tdMasterData.jointEmploymentDetail.needInfo}">
-                
-                <div class="Container100">
-                    <div class="Container45 Fleft CustomWidthFA-Responsive">
-                        <label Class="Container100"
-                               style="text-align: left !important; font-weight: bold !important;">Employer
-                            Name</label>
+            </div>
 
-                        <div class="EmptyBox5"></div>
-                        <p:inputText
-                                styleClass="Wid90 FS14 CustomWidthFA-Responsive"
-                                value="#{tdcto.tdMasterData.jointEmploymentDetail.employerName}"
-                                placeholder="Employer Name">
-                        </p:inputText>
-                    </div>
-                    <div
-                            class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
-                        <label Class="Container100"
-                               style="text-align: left !important; font-weight: bold !important;">Occupation</label>
 
-                        <div class="EmptyBox5"></div>
-                        <p:inputText
-                                styleClass="Wid90 FS14 CustomWidthFA-Responsive"
-                                value="#{tdcto.tdMasterData.jointEmploymentDetail.occupation}"
-                                placeholder="Occupation">
-                        </p:inputText>
-                    </div>
-                </div>
+        </p:panel>
+    </p:tab>
 
-                <div class="EmptyBox20"></div>
+    </p:tabView>
 
-                <div class="Container100">
-                    <div class="Container45 Fleft CustomWidthFA-Responsive">
-                        <label Class="Container100"
-                               style="text-align: left !important; font-weight: bold !important;">Type of Business</label>
-
-                        <div class="EmptyBox5"></div>
-                        <p:inputText
-                                styleClass="Wid90 FS14 CustomWidthFA-Responsive"
-                                value="#{tdcto.tdMasterData.jointEmploymentDetail.typeOfBusiness}"
-                                placeholder="Type of Business">
-                        </p:inputText>
-                    </div>
-                    <div class="Container45 Fright CustomWidthFA-Responsive">
-                        <label Class="Container100"
-                               style="text-align: left !important; font-weight: bold !important;">Employer
-                            Street Address</label>
-
-                        <div class="EmptyBox5"></div>
-                        <p:inputText
-                                styleClass="Wid90 FS14 CustomWidthFA-Responsive"
-                                value="#{tdcto.tdMasterData.jointEmploymentDetail.employerStreetAddress}"
-                                placeholder="Employer Street Address">
-                        </p:inputText>
-                    </div>
-
-                </div>
-
-                <div class="EmptyBox20"></div>
-                <div class="Container100 CustomWidthFA2 MarTop5">
-                    <div class="Container30 CustomWidthFA-Responsive">
-                        <label Class="Container100"
-                               style="text-align: left !important; font-weight: bold !important;">City</label>
-
-                        <div class="EmptyBox5"></div>
-                        <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
-                                     value="#{tdcto.tdMasterData.jointEmploymentDetail.employerCity}"
-                                     placeholder="City">
-                        </p:inputText>
-                    </div>
-                    <div class="Container30 Margin-FAAddress CustomWidthFA-Responsive">
-                        <label Class="Container100"
-                               style="text-align: left !important; font-weight: bold !important;">State</label>
-
-                        <div class="EmptyBox5"></div>
-                        <p:selectOneMenu styleClass="FundAccountDropdownUI formpageDropdown"
-                                         value="#{tdcto.tdMasterData.jointEmploymentDetail.employerState}"
-                                         style="width: 100%;">
-                            <p:ajax/>
-                            <f:selectItem itemLabel="Select State" itemValue=""
-                                          noSelectionOption="true"/>
-                            <f:selectItems value="#{tdcto.tdMasterData.usmaps.states.entrySet()}"
-                                           var="jointemploeyStates" itemLabel="#{jointemploeyStates.value}" itemValue="#{jointemploeyStates.key}"/>
-                        </p:selectOneMenu>
-                    </div>
-                    <div class="Container30 Fright-FAAddress CustomWidthFA-Responsive">
-                        <label Class="Container100"
-                               style="text-align: left !important; font-weight: bold !important;">Zip
-                            Code</label>
-
-                        <div class="EmptyBox5"></div>
-                        <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
-                                     value="#{tdcto.tdMasterData.jointEmploymentDetail.employerZipCode}"
-                                     placeholder="Zip Code">
-                        </p:inputText>
-                    </div>
-                </div>
-
-            </p:panel>
-<div class="Container100 MarTop20" style="margin: 10px 10px;">
-            <p:commandLink styleClass="UI-prevButtonFA Fleft"
-                           actionListener="#{tdcto.prevPage}"
-                           update="@form"/>
-
-            <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-                           actionListener="#{tdcto.nextPage}"
-                           update="@form"/>
-        </div>
-        </div>
-        
-
-    </p:panel>
-</p:tab>
-
-</p:tabView>
-
-</ui:composition>
+    </ui:composition>
