--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -265,25 +265,25 @@
                                         <p:ajax/>
                                         <f:selectItem itemLabel="Select the Delivery Firm" itemValue="   "
                                                       noSelectionOption="true"/>
-                                        <f:selectItem itemValue="" itemLabel="Curian Clearing" />
-                                        <f:selectItem itemValue="" itemLabel="Edward Jones" />
-                                        <f:selectItem itemValue="" itemLabel="First Clearing Corp(Wachovia and Wells Fargo)" />
-                                        <f:selectItem itemValue="" itemLabel="Janney Montgomery Scott" />
-                                        <f:selectItem itemValue="" itemLabel="Lincoln Financial Advisors" />
-                                        <f:selectItem itemValue="" itemLabel="Lincoln Financial Securities" />
-                                        <f:selectItem itemValue="" itemLabel="Linsco Private Ledger (LPL)" />
-                                        <f:selectItem itemValue="" itemLabel="M and I Brokerage Services" />
-                                        <f:selectItem itemValue="" itemLabel="Merrill Lynch" />
-                                        <f:selectItem itemValue="" itemLabel="Morgan Stanley Smith Barney" />
-                                        <f:selectItem itemValue="" itemLabel="National Financial Services" />
-                                        <f:selectItem itemValue="" itemLabel="OptionsXpress/BrokersXpress" />
-                                        <f:selectItem itemValue="" itemLabel="Pershing" />
-                                        <f:selectItem itemValue="" itemLabel="RBC Capital Markets" />
-                                        <f:selectItem itemValue="" itemLabel="SEI Private Trust Co." />
-                                        <f:selectItem itemValue="" itemLabel="Stifel, Nicolaus and Company Incorporated" />
-                                        <f:selectItem itemValue="" itemLabel="Wachovia Securities" />
-                                        <f:selectItem itemValue="" itemLabel="Wedbush Securities Inc." />
-                                        <f:selectItem itemValue="" itemLabel="Others" />
+                                        <f:selectItem itemValue="CURICLEAR" itemLabel="Curian Clearing" />
+                                        <f:selectItem itemValue="EDWAJONE" itemLabel="Edward Jones" />
+                                        <f:selectItem itemValue="FIRSCLEARCORP" itemLabel="First Clearing Corp(Wachovia and Wells Fargo)" />
+                                        <f:selectItem itemValue="JANNMONTSCT" itemLabel="Janney Montgomery Scott" />
+                                        <f:selectItem itemValue="LINCFINAADVI" itemLabel="Lincoln Financial Advisors" />
+                                        <f:selectItem itemValue="LINCFINASECU" itemLabel="Lincoln Financial Securities" />
+                                        <f:selectItem itemValue="LINSPRIVLEDG" itemLabel="Linsco Private Ledger (LPL)" />
+                                        <f:selectItem itemValue="MIBROKSERV" itemLabel="M and I Brokerage Services" />
+                                        <f:selectItem itemValue="MERRLYNC" itemLabel="Merrill Lynch" />
+                                        <f:selectItem itemValue="MORGSTANSMITBARN" itemLabel="Morgan Stanley Smith Barney" />
+                                        <f:selectItem itemValue="NATIFINASERV" itemLabel="National Financial Services" />
+                                        <f:selectItem itemValue="OPTXPREBROKXPRE" itemLabel="OptionsXpress/BrokersXpress" />
+                                        <f:selectItem itemValue="PERS" itemLabel="Pershing" />
+                                        <f:selectItem itemValue="RBCCAPIMARK" itemLabel="RBC Capital Markets" />
+                                        <f:selectItem itemValue="SEIPRIVTRUS" itemLabel="SEI Private Trust Co." />
+                                        <f:selectItem itemValue="STIFNICOCOMPINCO" itemLabel="Stifel, Nicolaus and Company Incorporated" />
+                                        <f:selectItem itemValue="WACHSECU" itemLabel="Wachovia Securities" />
+                                        <f:selectItem itemValue="WEDBSECUINC" itemLabel="Wedbush Securities Inc." />
+                                        <f:selectItem itemValue="OTH" itemLabel="Others" />
                                     </p:selectOneMenu>
                                 </div>
                             </div>
@@ -351,20 +351,7 @@
 
                             <div class="EmptyBox20"></div>
                         </p:panel>
-<div class="Container80 MarTop20" style="margin: 0 auto!important; float: none!important;">
-                    <p:commandLink styleClass="UI-prevButtonFA Fleft"
-                                   actionListener="#{tdcto.prevPage}"
-                                   process="@this"
-                                   update="@form"/>
 
-                    <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-                    				style="background-position-x: 50px!important;"
-                                   rendered="#{tdcto.tdMasterData.recurringFlag}"
-                                   actionListener="#{tdcto.nextPage}"
-                                   process="@parent"
-                                   update="@form"/>
-
-                </div>
                         <!-- Wire transfer -->
                         <p:panel id="wirePanel" styleClass="Container80 Fnone"
                                  style="border: 0px; background: transparent; margin: 0 auto!important;"
@@ -422,6 +409,19 @@
                         </p:panel>
 
                     </p:panel>
+                    <div class="Container80 MarTop20" style="margin: 0 auto!important; float: none!important;">
+                        <p:commandLink styleClass="UI-prevButtonFA Fleft"
+                                       actionListener="#{tdcto.prevPage}"
+                                       process="@this"
+                                       update="@form"/>
+
+                        <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+                                       style="background-position-x: 50px!important;"
+                                       actionListener="#{tdcto.nextPage}"
+                                       process="@parent"
+                                       update="@form"/>
+
+                    </div>
                 </div>
 
 
@@ -441,7 +441,8 @@
                         <!-- Rerurring -->
                         <div class="Container100 CustomWidthFA2 MarTop5">
                             <p:selectBooleanCheckbox styleClass="RegulatoryCheckBox" value="#{tdcto.tdMasterData.ownerSPF}"
-                                                     itemLabel="Please use the existing account details">
+                                                     itemLabel="Please use the existing account details"
+                                rendered="#{tdcto.tdMasterData.fundType=='PMACH'}">
                                 <p:ajax update=":ctoForm:tdaccordian:regTabV:ownerregspfPanel"/>
                             </p:selectBooleanCheckbox>
                         </div>
