Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -106,7 +106,7 @@
 										 value="#{tdcto.tdMasterData.tmpBenefiaciaryDetail.beneFirstName}">
 							</p:inputText>
 							<p:inputText
-									styleClass="MiddleInitialWidth FS14 InputMergeLeft InputMergeRight"
+									styleClass="MiddleInitialWidthB FS14 InputMergeLeft InputMergeRight"
 									placeholder="Middle Initial"
 									value="#{tdcto.tdMasterData.tmpBenefiaciaryDetail.beneMidInitial}">
 							</p:inputText>
