--- a/tcm/modules/web/src/main/webapp/setPassword.xhtml
+++ b/tcm/modules/web/src/main/webapp/setPassword.xhtml
@@ -6,79 +6,110 @@
                 template="/template/common/simple.xhtml">
 
     <f:metadata>
-        <f:viewParam name="u" value="#{userBean.beanUserID}"/>
+        <f:viewParam name="l" value="#{userBean.beanLogonID}"/>
         <f:viewParam name="r" value="#{userBean.beanResetID}"/>
-        <f:event type="preRenderView" listener="#{userBean.preRenderView}"/>
+        <f:event type="preRenderView" listener="#{userBean.preRenderResetUser}"/>
     </f:metadata>
 
     <ui:define name="content">
+
         <div id="layout-portlets-cover">
-            <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
-                 style="margin-top:5%;">
+            <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray "
+                 style="background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
                 <div class="Container90 Fnone MarAuto TexAlCenter">
-                    <div class="EmptyBox20"></div>
-                    <h:form>
-                        <h:graphicImage id="logo" name="#{uiLayout.logo}" styleClass="Fleft" library="invessence"
-                                        class="MarAuto MarTop20 MarBot10"/>
+                    <h:form id="logonForm" prependId="false">
+                        <div class="EmptyBox50"></div>
+                        <h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}" styleClass="Fleft" library="invessence"
+                                        class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
+                        <p:panel id="p1" styleClass="Container100" style="border: 0px; background: transparent">
+                            <div class="EmptyBox20"></div>
+                            <p:growl id="sgrowl"/>
 
-                        <h:inputHidden value="#{userBean.beanUserID}" styleClass="Wid90"/>
-                        <h:inputHidden id="resetCode" value="#{userBean.beanResetID}"/>
-                        <div class="EmptyBox10"></div>
-                        <div class="Container90">
-                            <p:growl id="sgrowl" escape="false" autoUpdate="true"/>
-                        </div>
-                        <div class="EmptyBox5"></div>
-                        <p:panel id="signup" styleClass="Container100" style="border:0px">
+                            <div class="EmptyBox10"></div>
+                            <div class="Container100">
+                                <div class="ContainerIndent">
+                                    <p:inputText id="email" readonly="true"
+                                                 styleClass="Container80 Fleft MarAuto Fs18"
+                                                 value="#{userBean.beanEmail}" placeholder="Email">
+                                    </p:inputText>
 
-                            <p:panel id="p1" styleClass="Container100 Responsive50 TexAlLeft"
-                                     style="border: 0px">
-                                <div class="Container90 Responsive50">
-                                    <div class="ContainerIndent">
-                                    </div>
-                                    <p:panelGrid columns="3" layout="grid"
-                                                 style="border:0px !important; padding: 5px !important; background:none;" class="FormContent">
-                                        <h:outputText value="User ID" styleClass="Wid90"/>
-                                        <h:outputText value="#{userBean.beanUserID}" styleClass="Wid90"/>
-                                        <h:outputText styleClass="Wid90"/>
-
-                                        <h:outputText value="Password" styleClass="Wid90"/>
-                                        <p:password id="pwd1" value="#{userBean.password}" styleClass="Wid90"
-                                                    placeholder="New Password"
-                                                    feedback="true" inline="true">
-                                        </p:password>
-                                        <p:commandButton id="pwdHelp"  styleClass="Wid90"
-                                                         icon="fa fa-question-circle white"
-                                                         value="Help" process="@none"/>
-
-                                        <h:outputText value="Confirm Password" styleClass="Wid90"/>
-                                        <p:password id="pwd2" value="#{userBean.confirmNewPassword}" styleClass="Wid90"
-                                                    placeholder="Confirm Password"/>
-                                        <h:outputText styleClass="Wid90"/>
-
-                                    </p:panelGrid>
                                 </div>
-                            </p:panel>
+                            </div>
+                            <div class="EmptyBox10"></div>
+                            <div class="Container100">
+                                <div class="ContainerIndent">
+                                    <p:inputText id="userid" readonly="true"
+                                                 styleClass="Container60 Fleft MarAuto Fs18"
+                                                 value="#{userBean.beanUserID}" placeholder="User ID"
+                                                 required="true" requiredMessage="User ID is requiired.">
+                                    </p:inputText>
+                                </div>
+                            </div>
+                            <div class="EmptyBox10"></div>
+                            <div class="Container100">
+                                <div class="ContainerIndent">
+                                    <p:password id="pwd1" styleClass="Container60 Fleft MarAuto Fs18"
+                                                value="#{userBean.pwd1}"
+                                                placeholder="Password"
+                                                feedback="true" inline="false"
+                                                required="true" requiredMessage="Password must be entered.">
+                                    </p:password>
+                                    <p:commandButton id="pwdHelp" styleClass="Container10 Fright"
+                                                     icon="fa fa-question Fs18 white"
+                                                     process="@none"/>
 
-                            <f:facet name="footer">
-                                <p:commandButton value="Reset Password" type="submit" styleClass="Fright"
-                                                 actionListener="#{userBean.resetPassword}"
-                                                 update="p1, sgrowl"/>
-                            </f:facet>
-                            <p:overlayPanel id="helpPanel" for="pwdHelp" hideEffect="fade" dynamic="false"
-                                            showCloseIcon="true"
-                                            style="width:300px">
-                                Password Must contain a minimum of 8 Characters including at least:
-                                <ul>
-                                    <li>1 uppercase letter</li>
-                                    <li>1 number</li>
-                                    <li>1 of these special characters: !,#,$,%,?</li>
-                                </ul>
-                            </p:overlayPanel>
+                                    <p:overlayPanel id="helpPanel" for="pwdHelp"
+                                                    hideEffect="fade" dynamic="false"
+                                                    showCloseIcon="true"
+                                                    style="width:350px; text-align: left; margin-left: 5px">
+                                        Password must contain a minimum of 8 characters including at least:
+                                        <ul>
+                                            <li>1 uppercase letter</li>
+                                            <li>1 number</li>
+                                            <li>1 of these special characters: !,#$%?:.</li>
+                                        </ul>
+                                    </p:overlayPanel>
 
+                                </div>
+                            </div>
+                            <div class="EmptyBox10"></div>
+                            <div class="Container100">
+                                <div class="ContainerIndent">
+                                    <p:password id="pwd2" styleClass="Container60 Fleft MarAuto Fs18"
+                                                value="#{userBean.pwd2}"
+                                                placeholder="Confirm Password">
+                                    </p:password>
+                                </div>
+                            </div>
+                            <div class="EmptyBox10"></div>
+                            <div class="Container100">
+                                <div class="ContainerIndent">
+                                    <h:outputLabel styleClass="Container90 Fleft MarAuto Fs18 TexAlLeft"
+                                                   id="question"
+                                                   value="Question: #{userBean.userdata.randomQ}">
+                                    </h:outputLabel>
+                                    <div class="EmptyBox10"></div>
+                                    <p:inputText styleClass="Container60 Fleft MarAuto Fs18"
+                                                 value="#{userBean.beanans1}" placeholder="Answer"
+                                                 required="true" requiredMessage="Please answer the security question.">
+                                    </p:inputText>
+                                </div>
+                            </div>
+                            <div class="EmptyBox10"></div>
+                            <p:separator/>
+                            <div class="EmptyBox5"></div>
+                            <div class="Container100">
+                                <div class="ContainerIndent TexAlCenter">
+                                    <p:commandButton value="Next" type="submit"
+                                                     actionListener="#{userBean.resetPassword}"
+                                                     update="p1, sgrowl"/>
+                                </div>
+                            </div>
                         </p:panel>
+
+                        <div class="EmptyBox50"></div>
                     </h:form>
                 </div>
-                <div class="EmptyBox50"></div>
             </div>
         </div>
 
